Updated button patterns added

--- a/3/atoms/buttons/buttons.html
+++ b/3/atoms/buttons/buttons.html
@@ -53,15 +53,16 @@
         <section class="row">
           <div class="column">
             <h2>Usage<span class="anchor"><a href="atoms/buttons/buttons.html#usage"><span class="icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path d="M0 0h24v24H0z" stroke="none"/><path d="M10 14a3.5 3.5 0 0 0 5 0l4-4a3.5 3.5 0 0 0-5-5l-.5.5"/><path d="M14 10a3.5 3.5 0 0 0-5 0l-4 4a3.5 3.5 0 0 0 5 5l.5-.5"/></svg></span></a></span></h2>
-            <p>There are three different types of buttons to use:</p>
+            <h3>Button types<span class="anchor"><a href="atoms/buttons/buttons.html#button-types"><span class="icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path d="M0 0h24v24H0z" stroke="none"/><path d="M10 14a3.5 3.5 0 0 0 5 0l4-4a3.5 3.5 0 0 0-5-5l-.5.5"/><path d="M14 10a3.5 3.5 0 0 0-5 0l-4 4a3.5 3.5 0 0 0 5 5l.5-.5"/></svg></span></a></span></h3>
+            <p>There are three different types of buttons:</p>
             <div class="row cards">
               <div class="card">
                 <figure>
                   <button type="button" style="margin-top: 0;">Button</button>
                 </figure>
                 <div class="text">
-                  <h3>Solid</h3>
-                  <p>Solid buttons direct the user&rsquo;s attention to the primary action the application is suggesting that the user take.<!--  Solid button <code>:hover</code> and <code>:focus</code> states look like outline buttons. --></p>
+                  <h4>Solid</h4>
+                  <p>Solid buttons direct the user&rsquo;s attention to the primary action the application is suggesting that the user take.</p>
                 </div>
               </div>
               <div class="card">
@@ -69,7 +70,7 @@
                   <button type="button" class="outline" style="margin-top: 0;">Button</button>
                 </figure>
                 <div class="text">
-                  <h3>Outline</h3>
+                  <h4>Outline</h4>
                   <p>Outline buttons are used to indicate a secondary action or to reduce visual noise when there are many actions of equal importance.</p>
                 </div>
               </div>
@@ -78,34 +79,32 @@
                   <button type="button" class="quiet" style="margin-top: 0;">Button</button>
                 </figure>
                 <div class="text">
-                  <h3>Quiet</h3>
+                  <h4>Quiet</h4>
                   <p>Quiet buttons are used in scenarios where more subtle button treatment is required.</p>
                 </div>
               </div>
             </div>
             <h3>Buttons vs. links<span class="anchor"><a href="atoms/buttons/buttons.html#buttons-vs-links"><span class="icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path d="M0 0h24v24H0z" stroke="none"/><path d="M10 14a3.5 3.5 0 0 0 5 0l4-4a3.5 3.5 0 0 0-5-5l-.5.5"/><path d="M14 10a3.5 3.5 0 0 0-5 0l-4 4a3.5 3.5 0 0 0 5 5l.5-.5"/></svg></span></a></span></h3>
             <p>While buttons and links may use similar visual treatments, it is important that you use a link (or anchor element) for anytime clicking the element will navigate you to a different page. Buttons are for interaction in the current page, such as refreshing the content or submitting a form.</p>
-          </div>
-        </section>
-        <section class="row">
-          <div class="column">
-            <h2>Placement<span class="anchor"><a href="atoms/buttons/buttons.html#placement"><span class="icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path d="M0 0h24v24H0z" stroke="none"/><path d="M10 14a3.5 3.5 0 0 0 5 0l4-4a3.5 3.5 0 0 0-5-5l-.5.5"/><path d="M14 10a3.5 3.5 0 0 0-5 0l-4 4a3.5 3.5 0 0 0 5 5l.5-.5"/></svg></span></a></span></h2>
+            <h3>Placement<span class="anchor"><a href="atoms/buttons/buttons.html#placement"><span class="icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path d="M0 0h24v24H0z" stroke="none"/><path d="M10 14a3.5 3.5 0 0 0 5 0l4-4a3.5 3.5 0 0 0-5-5l-.5.5"/><path d="M14 10a3.5 3.5 0 0 0-5 0l-4 4a3.5 3.5 0 0 0 5 5l.5-.5"/></svg></span></a></span></h3>
             <p>There are two distinct patterns when it comes to the placement of a button:</p>
             <div class="row cards two">
               <div class="card">
                 <figure>
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 366 226"><path d="M144 194H82a4 4 0 0 0-4 4v24a4 4 0 0 0 4 4h62a4 4 0 0 0 4-4v-24a4 4 0 0 0-4-4Zm2 28a2 2 0 0 1-2 2H82a2 2 0 0 1-2-2v-24a2 2 0 0 1 2-2h62a2 2 0 0 1 2 2Zm-76-24v24a4 4 0 0 1-4 4H4a4 4 0 0 1-4-4v-24a4 4 0 0 1 4-4h62a4 4 0 0 1 4 4ZM0 112h366v16H0Zm0-32h366v16H0Zm0-32h366v16H0ZM366 0v32H0V0Z" style="fill:#eee"/><path d="M358 15.5v1h-.8l-3.2 2-4 2.5v-4.5H20a6 6 0 0 1-5.5 5.5v60a6 6 0 0 1 5.5 5.5h158V83l4 2.5 3.2 2h.8v1h-.8l-3.2 2-4 2.5v-4.5H20a6 6 0 0 1-5.5 5.5v51H19l-2.5 4-2 3.2V204a6 6 0 1 1-1 0v-51.8l-2-3.2-2.5-4h4.5V94a6 6 0 0 1 0-12V22a6 6 0 1 1 6.5-6.5h330V11l4 2.5 3.2 2Z" style="fill:#df3a32"/></svg>
                 </figure>
                 <div class="text">
-                  <h3>Z-pattern</h3>
-                  <p>The Z-pattern is a natural way for the user to go through content within a constrained container and when tasks are oriented from the top-left and ending with a primary call to action on the right bottom side of the container. This pattern is reversed for right to left languages.</p>
+                  <h4>F-pattern</h4>
+                  <p>The F-pattern is good for an unconstrained container, such as a form. The user will go through the content line-by-line, arriving at a call to action at the end.</p>
                 </div>
               </div>
               <div class="card">
                 <figure>
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 366 226" style="enable-background:new 0 0 366 226" xml:space="preserve"><path d="M284 194h-62c-2.2 0-4 1.8-4 4v24c0 2.2 1.8 4 4 4h62c2.2 0 4-1.8 4-4v-24c0-2.2-1.8-4-4-4zm2 28c0 1.1-.9 2-2 2h-62c-1.1 0-2-.9-2-2v-24c0-1.1.9-2 2-2h62c1.1 0 2 .9 2 2v24zm80-24v24c0 2.2-1.8 4-4 4h-62c-2.2 0-4-1.8-4-4v-24c0-2.2 1.8-4 4-4h62c2.2 0 4 1.8 4 4zM0 112h366v16H0v-16zm0-32h366v16H0V80zm0-32h366v16H0V48zM366 0v32H0V0h366z" style="fill:#eee"/><path d="M358 210c0 3.3-2.7 6-6 6-3.1 0-5.7-2.4-6-5.5H186.2l-3.2 2-4 2.5v-4.5H20c-.3 3.1-2.8 5.5-6 5.5-3.3 0-6-2.7-6-6s2.7-6 6-6c2 0 3.9 1 4.9 2.6L346.6 18.5c-.3-.6-.5-1.3-.5-2H186.2l-3.2 2-4 2.5v-4.5H20c-.3 3.1-2.8 5.5-6 5.5-3.3 0-6-2.7-6-6s2.7-6 6-6c3.1 0 5.7 2.4 6 5.5h159V11l4 2.5 3.2 2H346c.3-3.1 2.8-5.5 6-5.5 3.3 0 6 2.7 6 6s-2.7 6-6 6c-2 0-3.9-1-4.9-2.6L19.4 207.5c.3.6.5 1.3.5 2h159V205l4 2.5 3.2 2H346c.3-3.1 2.8-5.5 6-5.5 3.3 0 6 2.7 6 6z" style="fill:#df3a32"/></svg>
                 </figure>
                 <div class="text">
-                  <h3>F-pattern</h3>
-                  <p>The F-pattern is a natural way to go through content in an unconstrained container, such as a form on the page itself. The user will go through the content line-by-line, arriving at a call to action at the end.</p>
+                  <h4>Z-pattern</h4>
+                  <p>The Z-pattern is good for a constrained container or when tasks are oriented from the top-left and ending with a call to action on the right bottom side of the container. Reverse the pattern for right to left languages.</p>
                 </div>
               </div>
             </div>
@@ -116,59 +115,83 @@
             <h2>Style<span class="anchor"><a href="atoms/buttons/buttons.html#style"><span class="icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path d="M0 0h24v24H0z" stroke="none"/><path d="M10 14a3.5 3.5 0 0 0 5 0l4-4a3.5 3.5 0 0 0-5-5l-.5.5"/><path d="M14 10a3.5 3.5 0 0 0-5 0l-4 4a3.5 3.5 0 0 0 5 5l.5-.5"/></svg></span></a></span></h2>
             <p>Consistent button styles make it easier for a user to recognize areas to take action across an application.</p>
             <div class="row">
-              <div class="column span-8">
+              <div class="column span-7">
                 <h3>Typography<span class="anchor"><a href="atoms/buttons/buttons.html#typography"><span class="icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path d="M0 0h24v24H0z" stroke="none"/><path d="M10 14a3.5 3.5 0 0 0 5 0l4-4a3.5 3.5 0 0 0-5-5l-.5.5"/><path d="M14 10a3.5 3.5 0 0 0-5 0l-4 4a3.5 3.5 0 0 0 5 5l.5-.5"/></svg></span></a></span></h3>
-                <p>Use sentence case for buttons. Never use all-caps for buttons.</p>
+                <p>Use sentence case for buttons.</p>
               </div>
-              <div class="column span-3">
+              <div class="column span-5">
                 <figure>
-                  <button type="button" style="margin-top: 0;">Reset your password</button>
+                  <figcaption>html</figcaption>
+<pre><code>&lt;button type=&quot;button&quot;&gt;Reset your password&lt;/button&gt;</code></pre>
+                  <button type="button">Reset your password</button>
                 </figure>
               </div>
             </div>
             <div class="row">
-              <div class="column span-8">
+              <div class="column span-7">
                 <h3>Color<span class="anchor"><a href="atoms/buttons/buttons.html#color"><span class="icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path d="M0 0h24v24H0z" stroke="none"/><path d="M10 14a3.5 3.5 0 0 0 5 0l4-4a3.5 3.5 0 0 0-5-5l-.5.5"/><path d="M14 10a3.5 3.5 0 0 0-5 0l-4 4a3.5 3.5 0 0 0 5 5l.5-.5"/></svg></span></a></span></h3>
-                <p>There are two color options for buttons: <code>$secondary</code> and <code>$primary</code>. These two colors can be used in combination with solid and outline button styles to create a wide variety of button groups.</p>
+                <p>There are two color options for buttons: <code>$secondary</code> and <code>$primary</code>.</p>
               </div>
-              <div class="column span-3">
+              <div class="column span-5">
                 <figure>
-                  <button type="button" class="secondary" style="margin-top: 0;">Cancel</button>
-                  <button type="button" style="margin-top: 0;">Sign up</button>
+                  <figcaption>html</figcaption>
+<pre><code>&lt;button type=&quot;button&quot; class=&quot;secondary&quot;&gt;Cancel&lt;/button&gt;</code></pre>
+<pre><code>&lt;button type=&quot;button&quot;&gt;Sign up&lt;/button&gt;</code></pre>
+                  <button type="button" class="secondary">Cancel</button>
+                  <button type="button">Sign up</button>
                 </figure>
               </div>
             </div>
             <div class="row">
-              <div class="column span-8">
+              <div class="column span-7">
                 <h3>Icons<span class="anchor"><a href="atoms/buttons/buttons.html#icons"><span class="icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path d="M0 0h24v24H0z" stroke="none"/><path d="M10 14a3.5 3.5 0 0 0 5 0l4-4a3.5 3.5 0 0 0-5-5l-.5.5"/><path d="M14 10a3.5 3.5 0 0 0-5 0l-4 4a3.5 3.5 0 0 0 5 5l.5-.5"/></svg></span></a></span></h3>
-                <p>Icons can be placed to the left or right of the button text to decorate the call-to-action with a visual indicator. Icons should be used alongside text that clearly indicates what the interaction is expected to do.</p>
+                <p>Icons can be placed to the left or right of the button text to decorate the call-to-action with a visual indicator.</p>
               </div>
-              <div class="column span-3">
+              <div class="column span-5">
                 <figure>
-                  <!--<button type="button" style="margin-top: 0;"><span class="icon pre"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path d="M0 0h24v24H0z" stroke="none"/><circle cx="12" cy="12" r="9"/><path d="m9 12 2 2 4-4"/></svg></span>Button</button> -->
-                  <button type="button" style="margin-top: 0;">Button<span class="icon post"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path d="M0 0h24v24H0z" stroke="none"/><circle cx="12" cy="12" r="9"/><path d="m9 12 2 2 4-4"/></svg></span></button>
+                  <figcaption>html</figcaption>
+<pre><code>&lt;button type=&quot;button&quot;&gt;Button&lt;span class=&quot;icon post&quot;&gt;&lt;svg&gt;&lt;/svg&gt;&lt;/span&gt;&lt;/button&gt;</code></pre>
+                  <!--<button type="button"><span class="icon pre"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path d="M0 0h24v24H0z" stroke="none"/><circle cx="12" cy="12" r="9"/><path d="m9 12 2 2 4-4"/></svg></span>Button</button> -->
+                  <button type="button">Button<span class="icon post"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path d="M0 0h24v24H0z" stroke="none"/><circle cx="12" cy="12" r="9"/><path d="m9 12 2 2 4-4"/></svg></span></button>
                 </figure>
               </div>
           </div>
             <div class="row">
-              <div class="column span-8">
+              <div class="column span-7">
                 <h3>Badges<span class="anchor"><a href="atoms/buttons/buttons.html#badges"><span class="icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path d="M0 0h24v24H0z" stroke="none"/><path d="M10 14a3.5 3.5 0 0 0 5 0l4-4a3.5 3.5 0 0 0-5-5l-.5.5"/><path d="M14 10a3.5 3.5 0 0 0-5 0l-4 4a3.5 3.5 0 0 0 5 5l.5-.5"/></svg></span></a></span></h3>
-                <p><a href="">Badges</a> can be used inside buttons to indicate a known number of items associated with an action. This can help the user understand the impact or severity of the call-to-action. Badges always appear to the right of the text in left-to-right presentation.</p>
+                <p><a href="">Badges</a> can be used inside buttons to indicate a known number of items associated with an action.</p>
               </div>
-              <div class="column span-3">
+              <div class="column span-5">
                 <figure>
-                  <button type="button" style="margin-top: 0;">Button<span class="badge">10</span></button>
+                  <figcaption>html</figcaption>
+<pre><code>&lt;button type=&quot;button&quot;&gt;Button&lt;span class=&quot;badge&quot;&gt;10&lt;/span&gt;&lt;/button&gt;</code></pre>
+                  <button type="button">Button<span class="badge">10</span></button>
                 </figure>
               </div>
             </div>
             <div class="row">
-              <div class="column span-8">
+              <div class="column span-7">
                 <h3>Size<span class="anchor"><a href="atoms/buttons/buttons.html#size"><span class="icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path d="M0 0h24v24H0z" stroke="none"/><path d="M10 14a3.5 3.5 0 0 0 5 0l4-4a3.5 3.5 0 0 0-5-5l-.5.5"/><path d="M14 10a3.5 3.5 0 0 0-5 0l-4 4a3.5 3.5 0 0 0 5 5l.5-.5"/></svg></span></a></span></h3>
                 <p>Add a <code>small</code> class to your button to create a small button.</p>
               </div>
-              <div class="column span-3">
+              <div class="column span-5">
                 <figure>
-                  <button type="button" class="small" style="margin-top: 0;">Button</button>
+                  <figcaption>html</figcaption>
+<pre><code>&lt;button type=&quot;button&quot; class=&quot;small&quot;&gt;Button&lt;/button&gt;</code></pre>
+                  <button type="button" class="small">Button</button>
+                </figure>
+              </div>
+            </div>
+            <div class="row">
+              <div class="column span-7">
+                <h3>Disabled<span class="anchor"><a href="atoms/buttons/buttons.html#disabled"><span class="icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path d="M0 0h24v24H0z" stroke="none"/><path d="M10 14a3.5 3.5 0 0 0 5 0l4-4a3.5 3.5 0 0 0-5-5l-.5.5"/><path d="M14 10a3.5 3.5 0 0 0-5 0l-4 4a3.5 3.5 0 0 0 5 5l.5-.5"/></svg></span></a></span></h3>
+                <p>Buttons may be <code>disabled</code> to indicate to a user that the call-to-action is not-allowed.</p>
+              </div>
+              <div class="column span-5">
+                <figure>
+                  <figcaption>html</figcaption>
+<pre><code>&lt;button type=&quot;button&quot; disabled&gt;Button&lt;/button&gt;</code></pre>
+                  <button type="button" disabled>Button</button>
                 </figure>
               </div>
             </div>
@@ -184,6 +207,7 @@
           <li><a href="molecules/molecules.html">Molecules</a></li>
           <li><a href="organisms/organisms.html">Organisms</a></li>
           <li><a href="style/style.html">Style</a></li>
+          <li><a href="index/index.html">Index</a></li>
         </ul>
       </nav>
       <section class="brand-content">
