--- a/3/index.html
+++ b/3/index.html
@@ -60,6 +60,7 @@
           <li><a href="molecules/molecules.html">Molecules</a></li>
           <li><a href="organisms/organisms.html">Organisms</a></li>
           <li><a href="style/style.html">Style</a></li>
+          <li><a href="index/index.html">Index</a></li>
         </ul>
       </nav>
       <section class="brand-content">
