--- a/3/atoms/buttons/buttons.html
+++ b/3/atoms/buttons/buttons.html
@@ -33,6 +33,10 @@
           <svg class="menu-toggle-close" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path d="M0 0h24v24H0z" stroke="none"/><path d="M18 6L6 18M6 6l12 12"/></svg>
         </button>
         <ul id="header-navigation">
+          <li class="logo"><a href="index.html">
+            <span class="visuallyhidden">Home</span>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1024 796"><path fill="#01232d" d="M512 796h512L512 0v796z"/><path fill="#013342" d="M0 796h512V0L0 796z"/></svg>
+          </a></li>
           <li><a href="about/about.html">About</a></li>
           <li><a href="atoms/atoms.html">Atoms</a></li>
           <li><a href="molecules/molecules.html">Molecules</a></li>
