Inputs updates and more

--- a/3/molecules/molecules.html
+++ b/3/molecules/molecules.html
@@ -81,8 +81,8 @@
               </div>
               <div class="card">
                 <div class="text">
-                  <h3>Forms</h3>
-                  <p>Coming soon</p>
+                  <h3>Inputs</h3>
+                  <p><a href="molecules/inputs/inputs.html">View input components</a></p>
                 </div>
               </div>
               <div class="card">
